redoc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redoc
  template:
    metadata:
      labels:
        app: redoc
    spec:
      containers:
        - name: redoc
          image: redocly/redoc
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.1"
