redoc/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redoc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /redoc
            backend:
              serviceName: redoc
              servicePort: 8076
