redoc/redoc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redoc-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
  #   nginx.ingress.kubernetes.io/enable-cors: "true"
    # kubernetes.io/ingress.class: "nginx"
  labels:
    app: redoc
  # namespace: myapp
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: redoc-service
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redoc-service
  # namespace: myapp
spec:
  selector:
    app: redoc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redoc
  # namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redoc
  template:
    metadata:
      labels:
        app: redoc
    spec:
      containers:
        - name: redoc
          image: myredoc:1.0.13
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
